--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,12 @@
           <button type="submit" class="btn btn-default">Submit</button>
         </form>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Link</a></li>
+          <% if logged_in? %>
+            <li><a href="/users/<%= current_user.id %>"><%= current_user.user_name %></a></li>
+          <% else %>
+            <li><a href="/log-in">Log in</a></li>
+          <% end %>
+
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
