--- a/app/views/answers/new.html.erb
+++ b/app/views/answers/new.html.erb
@@ -1,3 +1,9 @@
 <h1>Submit your answer</h1>
 
-<%= render 'form' %>
+<% if current_user %>
+  <%= render 'form' %>
+<% else %>
+  <p>You must be logged in to answer a question.</p>
+  <p><%= link_to "Log In", log_in_path %></p>
+  <p><%= link_to "Create an account", new_user_path %></p>
+<% end %>
