--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,41 +19,26 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">Epicodus Overflow</a>
+        <a class="navbar-brand" href="/questions">Epicodus Overflow</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="/log-in">Log In<span class="sr-only">(current)</span></a></li>
           <li><a href="/questions">Questions</a></li>
           <li><a href="/questions/new">Ask a Question</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">One more separated link</a></li>
-            </ul>
-          </li>
-        </ul>
-        <form class="navbar-form navbar-left" role="search">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-          </div>
-          <button type="submit" class="btn btn-default">Submit</button>
-        </form>
-        <ul class="nav navbar-nav navbar-right">
-          <% if logged_in? %>
-            <li><a href="/users/<%= current_user.id %>"><%= current_user.user_name %></a></li>
+          <% if current_user %>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.user_name %><span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="/users/<%= current_user.id %>">Dashboard</a></li>
           <% else %>
-            <li><a href="/log-in">Log in</a></li>
+                <li><a href="/log-in">Log in</a></li>
+              </ul>
+            </li>
           <% end %>
-
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
